fixed an issue on mobile where the section dividers were too wide

--- a/demo/little-switzerland/cabins/cabins.css
+++ b/demo/little-switzerland/cabins/cabins.css
@@ -96,6 +96,10 @@
     margin-bottom: -30px;
 }
 
+.section-divider{
+    width: 100%;
+    max-width: 1300px;
+}
 
 
 @media screen and (max-width: 1000px){
